--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     
     <meta http-equiv='X-UA-Compatible' content='chrome=1'>
     <title>Wheel of VINCE</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel='stylesheet' href='stylesheets/styles.css'>
     <link rel='stylesheet' href='stylesheets/github-light.css'>
