--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   <nav>
-            <div class="logo"><h5>wheelofnames.com</h5></div>
+            <div class="logo"><p>wheelofnames.com</p></div>
             <div class="openMenu"><i class="fa fa-bars"></i></div>
             
         </nav>
