--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="modal-dialog vertical-align-center">
           <div class="modal-content">
               <div class="modal-header">
-                <h4 class="modal-title" id="myModalLabel">CONGRATULATIONS!!!</h4>
+                <h4 class="modal-title" id="myModalLabel">We Have a Winner</h4>
                   <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
                   </button>
               </div>
