--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
   
     
   <div id="textname">
-    <textarea placeholder="Write names here..." id="txtName" name="txtNames" rows="10" cols="0"></textarea>
+    <div>
+      <a id="ent" href="">Entries</a>
+      <a id="res" href="">Result</a>
+      <hr>
+    </div>
+    
+    <textarea placeholder="Write names here..." id="txtName" name="txtNames" rows="10" cols="40"></textarea>
   </div>
   <button id="sum">Submit</button>
     <script
